# WorkBuddyTools

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: release.yml
.learnings/: LEARNINGS.md
docs/superpowers/plans/: 2026-07-12-app-settings.md  2026-07-12-optional-sync-encryption.md  2026-07-12-session-management.md  2026-07-12-webdav-zip-sync.md
docs/superpowers/specs/: 2026-07-12-app-settings-design.md  2026-07-12-optional-sync-encryption-design.md  2026-07-12-session-management-design.md
prd/: 功能文档.md
src/: main.tsx  providerWorkflow.ts  styles.css  tauriRuntime.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  lib.rs  main.rs  sessions.rs  settings.rs  sync.rs  webdav.rs
tests/: layoutCss.test.mjs  providerWorkflow.test.mjs  tauriRuntime.test.mjs  theme.test.mjs
