[package]
name = "workbuddy-model-config"
version = "0.1.0"
description = "WorkBuddy third-party model configuration tool"
authors = ["WorkBuddyTools"]
edition = "2021"

[lib]
name = "workbuddy_model_config_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "workbuddy-model-config"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.5"
tokio = { version = "1.42.0", features = ["process"] }
url = "2.5.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
