[package]
name = "workbuddy-model-config"
version = "0.2.5"
description = "WorkBuddy third-party model configuration tool"
authors = ["WorkBuddyTools"]
edition = "2021"

[lib]
name = "workbuddy_model_config_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "workbuddy-model-config"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
aes-gcm = "0.10.3"
hex = "0.4.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled", "backup"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
semver = "1"
sha2 = "0.11.0"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.5"
tauri-plugin-updater = "2"
tempfile = "3.15.0"
tokio = { version = "1.42.0", features = ["process"] }
url = "2.5.4"
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
